--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -408,10 +408,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-0777c2abcafc>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-0777c2abcafc>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df[[\"Tag Location\", \"Date\"]] = df.`Tag Location, Date`.str.split\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[[\"Tag Location\", \"Date\"]] = df.`Tag Location, Date`.str.split"
+   ]
   }
  ],
  "metadata": {
