--- a/Monarchs_2001_cleanup.ipynb
+++ b/Monarchs_2001_cleanup.ipynb
@@ -965,7 +965,13 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
      ]
     },
     {
@@ -976,7 +982,7 @@
        "Tagged_Date         datetime64[ns]\n",
        "Reported_State              object\n",
        "Reported_Country            object\n",
-       "Reported_Date               object\n",
+       "Reported_Date       datetime64[ns]\n",
        "Miles                      float64\n",
        "dtype: object"
       ]
@@ -988,6 +994,7 @@
    ],
    "source": [
     "new_table[\"Tagged_Date\"]= pd.to_datetime(new_table[\"Tagged_Date\"]) \n",
+    "new_table[\"Reported_Date\"]= pd.to_datetime(new_table[\"Reported_Date\"]) \n",
     "new_table.dtypes"
    ]
   },
