exported wrong table, fixed

--- a/Monarchs_2001_cleanup.ipynb
+++ b/Monarchs_2001_cleanup.ipynb
@@ -1007,11 +1007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df7.to_csv(\"Monarchs2001.csv\")"
+    "new_table.to_csv(\"Monarchs2001.csv\")"
    ]
   }
  ],
