column names, removed imports not being used

--- a/Monarchs_2001_cleanup.ipynb
+++ b/Monarchs_2001_cleanup.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import sqlite3\n",
     "import os"
    ]
@@ -636,8 +635,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tagged_State</th>\n",
-       "      <th>Tagged_Date</th>\n",
+       "      <th>Tagged State</th>\n",
+       "      <th>Tagged Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -702,7 +701,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     Tagged_State Tagged_Date\n",
+       "     Tagged State Tagged Date\n",
        "0              MA    09-12-01\n",
        "1              MA    09-12-01\n",
        "2              NY    09-24-01\n",
@@ -727,7 +726,7 @@
     "df2 = df['tag_date'].str.split(', ', expand=True)\n",
     "df3 = df2[1].str.split(' ', expand=True)\n",
     "df2.columns = ['tag_city', 'state_date']\n",
-    "df3.columns = ['Tagged_State', 'Tagged_Date']\n",
+    "df3.columns = ['Tagged State', 'Tagged Date']\n",
     "df3\n"
    ]
   },
@@ -747,8 +746,8 @@
     "df4 = df['report_date'].str.split(', ', expand=True)\n",
     "df5 = df4[0].str.extract('(\\d\\d-\\d\\d-\\d\\d)', expand=True)\n",
     "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '') - to seperate date from city. decided not to use city\n",
-    "df4.columns = ['city_date', 'Reported_State', 'Reported_Country']\n",
-    "df5.columns = ['Reported_Date']"
+    "df4.columns = ['city_date', 'Reported State', 'Reported Country']\n",
+    "df5.columns = ['Reported Date']"
    ]
   },
   {
@@ -785,11 +784,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Tag No.</th>\n",
-       "      <th>Tagged_State</th>\n",
-       "      <th>Tagged_Date</th>\n",
-       "      <th>Reported_State</th>\n",
-       "      <th>Reported_Country</th>\n",
-       "      <th>Reported_Date</th>\n",
+       "      <th>Tagged State</th>\n",
+       "      <th>Tagged Date</th>\n",
+       "      <th>Reported State</th>\n",
+       "      <th>Reported Country</th>\n",
+       "      <th>Reported Date</th>\n",
        "      <th>Miles</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -910,7 +909,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     Tag No. Tagged_State Tagged_Date Reported_State Reported_Country  \\\n",
+       "     Tag No. Tagged State Tagged Date Reported State Reported Country  \\\n",
        "0     AAD929           MA    09-12-01           MICH               MX   \n",
        "1     AAD844           MA    09-12-01           MICH               MX   \n",
        "2     AIO261           NY    09-24-01           MICH               MX   \n",
@@ -923,7 +922,7 @@
        "1960  ADR234          NaN         NaN           MICH               MX   \n",
        "1961  AAG669          NaN         NaN             CT             None   \n",
        "\n",
-       "     Reported_Date   Miles  \n",
+       "     Reported Date   Miles  \n",
        "0         02-11-02  2344.0  \n",
        "1         03-08-02  2343.0  \n",
        "2         03-13-02  2329.0  \n",
@@ -947,7 +946,7 @@
    "source": [
     "df7 = pd.concat([df, df2, df3, df4, df5], axis=1)\n",
     "df7.drop(['state_date', 'tag_date', 'city_date', 'tag_city'], axis=1, inplace=True)\n",
-    "new_table = df7[['Tag No.','Tagged_State', 'Tagged_Date', 'Reported_State', 'Reported_Country', 'Reported_Date', 'Miles']]\n",
+    "new_table = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
     "new_table"
    ]
   },
@@ -978,11 +977,11 @@
      "data": {
       "text/plain": [
        "Tag No.                     object\n",
-       "Tagged_State                object\n",
-       "Tagged_Date         datetime64[ns]\n",
-       "Reported_State              object\n",
-       "Reported_Country            object\n",
-       "Reported_Date       datetime64[ns]\n",
+       "Tagged State                object\n",
+       "Tagged Date         datetime64[ns]\n",
+       "Reported State              object\n",
+       "Reported Country            object\n",
+       "Reported Date       datetime64[ns]\n",
        "Miles                      float64\n",
        "dtype: object"
       ]
@@ -993,8 +992,8 @@
     }
    ],
    "source": [
-    "new_table[\"Tagged_Date\"]= pd.to_datetime(new_table[\"Tagged_Date\"]) \n",
-    "new_table[\"Reported_Date\"]= pd.to_datetime(new_table[\"Reported_Date\"]) \n",
+    "new_table[\"Tagged Date\"]= pd.to_datetime(new_table[\"Tagged Date\"]) \n",
+    "new_table[\"Reported Date\"]= pd.to_datetime(new_table[\"Reported Date\"]) \n",
     "new_table.dtypes"
    ]
   },
@@ -1007,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
