copied db to remove datetime warning

--- a/Monarchs_2001_cleanup.ipynb
+++ b/Monarchs_2001_cleanup.ipynb
@@ -946,7 +946,8 @@
    "source": [
     "df7 = pd.concat([df, df2, df3, df4, df5], axis=1)\n",
     "df7.drop(['state_date', 'tag_date', 'city_date', 'tag_city'], axis=1, inplace=True)\n",
-    "new_table = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
+    "df8 = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
+    "new_table = df8.copy()\n",
     "new_table"
    ]
   },
@@ -955,24 +956,6 @@
    "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
