--- a/Monarchs_2001_cleanup.ipynb
+++ b/Monarchs_2001_cleanup.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<function nt.getcwd()>"
+       "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
      "execution_count": 3,
@@ -45,12 +45,12 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\".\\2001 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"2001 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs2001\", db, if_exists=\"replace\")\n",
     "\n",
-    "os.getcwd\n",
+    "os.getcwd()\n",
     "\n"
    ]
   },
@@ -981,6 +981,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df2, df3, df4, df5, df7, df8"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -989,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
