extracted tables from pdf

--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs2001.db\")"
+    "db = sqlite3.connect(\"Monarchs2000.db\")"
    ]
   },
   {
@@ -45,10 +45,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"2001 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"2000 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
-    "df.to_sql(\"monarchs2001\", db, if_exists=\"replace\")\n",
+    "df.to_sql(\"monarchs2000\", db, if_exists=\"replace\")\n",
     "\n",
     "os.getcwd()\n",
     "\n"
@@ -91,51 +91,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>index</td>\n",
-       "      <td>ix_monarchs2001_index</td>\n",
-       "      <td>monarchs2001</td>\n",
-       "      <td>63</td>\n",
-       "      <td>CREATE INDEX \"ix_monarchs2001_index\"ON \"monarc...</td>\n",
+       "      <td>ix_monarchs2000_index</td>\n",
+       "      <td>monarchs2000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CREATE INDEX \"ix_monarchs2000_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>index</td>\n",
-       "      <td>ix_monarchs_2001_index</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>table</td>\n",
-       "      <td>monarchs2001</td>\n",
-       "      <td>monarchs2001</td>\n",
-       "      <td>62</td>\n",
-       "      <td>CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>table</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>monarchs_2001</td>\n",
+       "      <td>monarchs2000</td>\n",
+       "      <td>monarchs2000</td>\n",
        "      <td>2</td>\n",
-       "      <td>CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...</td>\n",
+       "      <td>CREATE TABLE \"monarchs2000\" (\\n\"index\" INTEGER...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    type                    name       tbl_name  rootpage  \\\n",
-       "0  index   ix_monarchs2001_index   monarchs2001        63   \n",
-       "1  index  ix_monarchs_2001_index  monarchs_2001         3   \n",
-       "2  table            monarchs2001   monarchs2001        62   \n",
-       "3  table           monarchs_2001  monarchs_2001         2   \n",
+       "    type                   name      tbl_name  rootpage  \\\n",
+       "0  index  ix_monarchs2000_index  monarchs2000         3   \n",
+       "1  table           monarchs2000  monarchs2000         2   \n",
        "\n",
        "                                                 sql  \n",
-       "0  CREATE INDEX \"ix_monarchs2001_index\"ON \"monarc...  \n",
-       "1  CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...  \n",
-       "2  CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...  \n",
-       "3  CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...  "
+       "0  CREATE INDEX \"ix_monarchs2000_index\"ON \"monarc...  \n",
+       "1  CREATE TABLE \"monarchs2000\" (\\n\"index\" INTEGER...  "
       ]
      },
      "execution_count": 4,
@@ -220,7 +200,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Tag  Location, Date</td>\n",
+       "      <td>Tag City, State</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -229,7 +209,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Report Date, Location</td>\n",
+       "      <td>Tag Date</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -238,7 +218,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>Reporter</td>\n",
+       "      <td>Report Date</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -247,8 +227,26 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
+       "      <td>Report Location</td>\n",
+       "      <td>TEXT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Reporter</td>\n",
+       "      <td>TEXT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>Miles</td>\n",
-       "      <td>REAL</td>\n",
+       "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
@@ -258,14 +256,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   cid                   name     type  notnull dflt_value  pk\n",
-       "0    0                  index  INTEGER        0       None   0\n",
-       "1    1                Tag No.     TEXT        0       None   0\n",
-       "2    2                 Tagger     TEXT        0       None   0\n",
-       "3    3    Tag  Location, Date     TEXT        0       None   0\n",
-       "4    4  Report Date, Location     TEXT        0       None   0\n",
-       "5    5               Reporter     TEXT        0       None   0\n",
-       "6    6                  Miles     REAL        0       None   0"
+       "   cid             name     type  notnull dflt_value  pk\n",
+       "0    0            index  INTEGER        0       None   0\n",
+       "1    1          Tag No.     TEXT        0       None   0\n",
+       "2    2           Tagger     TEXT        0       None   0\n",
+       "3    3  Tag City, State     TEXT        0       None   0\n",
+       "4    4         Tag Date     TEXT        0       None   0\n",
+       "5    5      Report Date     TEXT        0       None   0\n",
+       "6    6  Report Location     TEXT        0       None   0\n",
+       "7    7         Reporter     TEXT        0       None   0\n",
+       "8    8            Miles     TEXT        0       None   0"
       ]
      },
      "execution_count": 5,
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs2001\")', db)\n",
+    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs2000\")', db)\n",
     "data_type"
    ]
   },
@@ -312,46 +312,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Tag No.</th>\n",
-       "      <th>Tag  Location, Date</th>\n",
-       "      <th>Report Date, Location</th>\n",
+       "      <th>Tag City, State</th>\n",
+       "      <th>Tag Date</th>\n",
+       "      <th>Report Date</th>\n",
+       "      <th>Report Location</th>\n",
        "      <th>Miles</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AAD929</td>\n",
-       "      <td>Salisbury, MA 09-12-01</td>\n",
-       "      <td>02-11-02 El Rosario, MICH, MX</td>\n",
-       "      <td>2344.0</td>\n",
+       "      <td>613PZ</td>\n",
+       "      <td>Old Lyme, CT</td>\n",
+       "      <td>09/24/00</td>\n",
+       "      <td>01/26/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>2222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AAD844</td>\n",
-       "      <td>Salisbury, MA 09-12-01</td>\n",
-       "      <td>03-08-02 Sierra Chincua, MICH, MX</td>\n",
-       "      <td>2343.0</td>\n",
+       "      <td>486KF</td>\n",
+       "      <td>Darlington, ONT</td>\n",
+       "      <td>09/12/99</td>\n",
+       "      <td>01/07/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>2090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AIO261</td>\n",
-       "      <td>Champlain, NY 09-24-01</td>\n",
-       "      <td>03-13-02 El Rosario, MICH, MX</td>\n",
-       "      <td>2329.0</td>\n",
+       "      <td>067GA</td>\n",
+       "      <td>Douglas Lake, MI</td>\n",
+       "      <td>08/20/00</td>\n",
+       "      <td>01/07/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>1995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AAU820</td>\n",
-       "      <td>Plattsburgh, NY 08-29-01</td>\n",
-       "      <td>02-27-02 El Rosario, MICH, MX</td>\n",
-       "      <td>2315.0</td>\n",
+       "      <td>154JR</td>\n",
+       "      <td>Chincoteague, VA</td>\n",
+       "      <td>09/25/99</td>\n",
+       "      <td>03/09/01</td>\n",
+       "      <td>Cerro Pelon, MEXICO, MX</td>\n",
+       "      <td>1969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ABG581</td>\n",
-       "      <td>Saranac Lake, NY 09-16-01</td>\n",
-       "      <td>03-13-02 El Rosario, MICH, MX</td>\n",
-       "      <td>2303.0</td>\n",
+       "      <td>017MS</td>\n",
+       "      <td>Cresson, PA</td>\n",
+       "      <td>09/01/99</td>\n",
+       "      <td>12/01/00</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>1927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -359,75 +371,87 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1957</th>\n",
-       "      <td>ADE225</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10-06-01 Lakeville, MN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>290</th>\n",
+       "      <td>611PF</td>\n",
+       "      <td>Rochester, MN?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>Dyersburg, TN</td>\n",
+       "      <td>?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1958</th>\n",
-       "      <td>ABW153</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>03-08-02 Sierra Chincua, MICH, MX</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>291</th>\n",
+       "      <td>260PG</td>\n",
+       "      <td>Rochester, MN?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>02/01/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>AJA875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>02-26-02 El Rosario, MICH, MX</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>292</th>\n",
+       "      <td>175PG</td>\n",
+       "      <td>Rochester, MN?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>02/28/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1960</th>\n",
-       "      <td>ADR234</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>02-26-02 El Rosario, MICH, MX</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>293</th>\n",
+       "      <td>295PG</td>\n",
+       "      <td>Rochester, MN?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>01/26/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1961</th>\n",
-       "      <td>AAG669</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>09-16-01 Guilford, CT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>294</th>\n",
+       "      <td>438JW</td>\n",
+       "      <td>Rochester, MN?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>01/07/01</td>\n",
+       "      <td>El Rosario, MICH, MX</td>\n",
+       "      <td>?</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1962 rows × 4 columns</p>\n",
+       "<p>295 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Tag No.        Tag  Location, Date              Report Date, Location  \\\n",
-       "0     AAD929     Salisbury, MA 09-12-01      02-11-02 El Rosario, MICH, MX   \n",
-       "1     AAD844     Salisbury, MA 09-12-01  03-08-02 Sierra Chincua, MICH, MX   \n",
-       "2     AIO261     Champlain, NY 09-24-01      03-13-02 El Rosario, MICH, MX   \n",
-       "3     AAU820   Plattsburgh, NY 08-29-01      02-27-02 El Rosario, MICH, MX   \n",
-       "4     ABG581  Saranac Lake, NY 09-16-01      03-13-02 El Rosario, MICH, MX   \n",
-       "...      ...                        ...                                ...   \n",
-       "1957  ADE225                        NaN             10-06-01 Lakeville, MN   \n",
-       "1958  ABW153                        NaN  03-08-02 Sierra Chincua, MICH, MX   \n",
-       "1959  AJA875                        NaN      02-26-02 El Rosario, MICH, MX   \n",
-       "1960  ADR234                        NaN      02-26-02 El Rosario, MICH, MX   \n",
-       "1961  AAG669                        NaN              09-16-01 Guilford, CT   \n",
+       "    Tag No.   Tag City, State  Tag Date Report Date          Report Location  \\\n",
+       "0     613PZ      Old Lyme, CT  09/24/00    01/26/01     El Rosario, MICH, MX   \n",
+       "1     486KF   Darlington, ONT  09/12/99    01/07/01     El Rosario, MICH, MX   \n",
+       "2     067GA  Douglas Lake, MI  08/20/00    01/07/01     El Rosario, MICH, MX   \n",
+       "3     154JR  Chincoteague, VA  09/25/99    03/09/01  Cerro Pelon, MEXICO, MX   \n",
+       "4     017MS       Cresson, PA  09/01/99    12/01/00     El Rosario, MICH, MX   \n",
+       "..      ...               ...       ...         ...                      ...   \n",
+       "290   611PF    Rochester, MN?         ?           ?            Dyersburg, TN   \n",
+       "291   260PG    Rochester, MN?         ?    02/01/01     El Rosario, MICH, MX   \n",
+       "292   175PG    Rochester, MN?         ?    02/28/01     El Rosario, MICH, MX   \n",
+       "293   295PG    Rochester, MN?         ?    01/26/01     El Rosario, MICH, MX   \n",
+       "294   438JW    Rochester, MN?         ?    01/07/01     El Rosario, MICH, MX   \n",
        "\n",
-       "       Miles  \n",
-       "0     2344.0  \n",
-       "1     2343.0  \n",
-       "2     2329.0  \n",
-       "3     2315.0  \n",
-       "4     2303.0  \n",
-       "...      ...  \n",
-       "1957     NaN  \n",
-       "1958     NaN  \n",
-       "1959     NaN  \n",
-       "1960     NaN  \n",
-       "1961     NaN  \n",
+       "    Miles  \n",
+       "0    2222  \n",
+       "1    2090  \n",
+       "2    1995  \n",
+       "3    1969  \n",
+       "4    1927  \n",
+       "..    ...  \n",
+       "290     ?  \n",
+       "291     ?  \n",
+       "292     ?  \n",
+       "293     ?  \n",
+       "294     ?  \n",
        "\n",
-       "[1962 rows x 4 columns]"
+       "[295 rows x 6 columns]"
       ]
      },
      "execution_count": 6,
@@ -1002,7 +1026,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs2001.csv\")"
+    "new_table.to_csv(\"Monarchs2000.csv\")"
    ]
   }
  ],
