--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "[1962 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,15 +739,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city_date</th>\n",
+       "      <th>Reported State</th>\n",
+       "      <th>Reported Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02-11-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>03-08-02 Sierra Chincua</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03-13-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>02-27-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>03-13-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957</th>\n",
+       "      <td>10-06-01 Lakeville</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>03-08-02 Sierra Chincua</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>02-26-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>02-26-02 El Rosario</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961</th>\n",
+       "      <td>09-16-01 Guilford</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1962 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    city_date Reported State Reported Country\n",
+       "0         02-11-02 El Rosario           MICH               MX\n",
+       "1     03-08-02 Sierra Chincua           MICH               MX\n",
+       "2         03-13-02 El Rosario           MICH               MX\n",
+       "3         02-27-02 El Rosario           MICH               MX\n",
+       "4         03-13-02 El Rosario           MICH               MX\n",
+       "...                       ...            ...              ...\n",
+       "1957       10-06-01 Lakeville             MN             None\n",
+       "1958  03-08-02 Sierra Chincua           MICH               MX\n",
+       "1959      02-26-02 El Rosario           MICH               MX\n",
+       "1960      02-26-02 El Rosario           MICH               MX\n",
+       "1961        09-16-01 Guilford             CT             None\n",
+       "\n",
+       "[1962 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df4 = df['report_date'].str.split(', ', expand=True)\n",
     "df5 = df4[0].str.extract('(\\d\\d-\\d\\d-\\d\\d)', expand=True)\n",
     "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '') - to seperate date from city. decided not to use city\n",
     "df4.columns = ['city_date', 'Reported State', 'Reported Country']\n",
-    "df5.columns = ['Reported Date']"
+    "df5.columns = ['Reported Date']\n",
+    "df4"
    ]
   },
   {
@@ -759,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +1059,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1090,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
