cleaned 2000 summary, updated ReadMe"

--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -792,117 +792,19 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>report_city</th>\n",
-       "      <th>Reported State</th>\n",
-       "      <th>Reported Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cerro Pelon</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>290</th>\n",
-       "      <td>Dyersburg</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>291</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>292</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>295 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     report_city Reported State Reported Country\n",
-       "0     El Rosario           MICH               MX\n",
-       "1     El Rosario           MICH               MX\n",
-       "2     El Rosario           MICH               MX\n",
-       "3    Cerro Pelon         MEXICO               MX\n",
-       "4     El Rosario           MICH               MX\n",
-       "..           ...            ...              ...\n",
-       "290    Dyersburg             TN             None\n",
-       "291   El Rosario           MICH               MX\n",
-       "292   El Rosario           MICH               MX\n",
-       "293   El Rosario           MICH               MX\n",
-       "294   El Rosario           MICH               MX\n",
-       "\n",
-       "[295 rows x 3 columns]"
+       "0       MX\n",
+       "1       MX\n",
+       "2       MX\n",
+       "3       MX\n",
+       "4       MX\n",
+       "      ... \n",
+       "290    USA\n",
+       "291     MX\n",
+       "292     MX\n",
+       "293     MX\n",
+       "294     MX\n",
+       "Name: Reported Country, Length: 295, dtype: object"
       ]
      },
      "execution_count": 9,
@@ -913,7 +815,9 @@
    "source": [
     "df3 = df['Report Location'].str.split(', ', expand=True)\n",
     "df3.columns = ['report_city', 'Reported State', 'Reported Country']\n",
-    "df3"
+    "add_usa = df3['Reported Country'].fillna('USA')\n",
+    "df3.drop(['Reported Country'], axis=1, inplace = True)\n",
+    "add_usa"
    ]
   },
   {
@@ -1025,7 +929,7 @@
        "      <td>MN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>TN</td>\n",
-       "      <td>None</td>\n",
+       "      <td>USA</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -1082,7 +986,7 @@
        "3     154JR           VA    09/25/99         MEXICO               MX   \n",
        "4     017MS           PA    09/01/99           MICH               MX   \n",
        "..      ...          ...         ...            ...              ...   \n",
-       "290   611PF           MN         NaN             TN             None   \n",
+       "290   611PF           MN         NaN             TN              USA   \n",
        "291   260PG           MN         NaN           MICH               MX   \n",
        "292   175PG           MN         NaN           MICH               MX   \n",
        "293   295PG           MN         NaN           MICH               MX   \n",
@@ -1110,7 +1014,7 @@
     }
    ],
    "source": [
-    "df4 = pd.concat([df, df2, df3], axis=1)\n",
+    "df4 = pd.concat([df, df2, df3, add_usa], axis=1)\n",
     "df4.drop(['Tag City, State', 'Report Location', 'report_city', 'tag_city'], axis=1, inplace=True)\n",
     "df5 = df4[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
     "new_table = df5.copy()\n",
@@ -1119,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1039,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,29 +1052,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "del df2, df3, df4, df5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-c98992fde71b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-c98992fde71b>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    new_table.Reported Country.replace(' ', 'USA')\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_table.Reported Country.replace(' ', 'USA')"
+    "del df2, df3, df4, df5, add_usa"
    ]
   },
   {
@@ -1182,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
